SALESFORCE/force-apps/deploy/main/default/objects/NotifySocket__e/NotifySocket__e.object-meta.xml
<CustomObject>
    <label>NotifySocket</label>
    <pluralLabel>NotifySocket</pluralLabel>
</CustomObject>