SALESFORCE/force-apps/deploy/main/default/objects/NotifySocket__e/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>