SALESFORCE/force-apps/deploy/main/default/objects/NotifySocket__e/fields/EntityName__c.field-meta.xml
<CustomField>
    <fullName>EntityName__c</fullName>
    <label>Entity Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>