SALESFORCE/force-apps/deploy/main/default/objects/NotifySocket__e/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <label>Records</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>